--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+
 figure {
     border: thin #c0c0c0 solid;
     display: flex;
     flex-flow: column;
-    margin: 0;
+    margin: 8px;
     padding: 5px;
+    box-shadow: 5px 5px 5px #666;
+}
+
+figure img {
+    width: 100%;
 }
 
 figcaption {
@@ -12,4 +25,50 @@ figcaption {
     font: italic smaller sans-serif;
     padding: 3px;
     text-align: center;
+}
+
+
+
+body { font-family: sans-serif; }
+
+.scene {
+  width: 200px;
+  height: 260px;
+  border: 1px solid #CCC;
+  margin: 40px 0;
+  perspective: 600px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
+}
+
+.card.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  line-height: 260px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+  backface-visibility: hidden;
+}
+
+.card__face--front {
+  background: red;
+}
+
+.card__face--back {
+  background: blue;
+  transform: rotateY(180deg);
 }
